# dev3pack3

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  INTEGRACION.md  Makefile  README.md  compose.dev.yaml  compose.yaml  drizzle.config.ts  eslint.config.mjs  mise.toml  package.json  readme.md  tailwind.config.cjs  test-connection.ts  tsconfig.json  turbo.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: chain-quality.yml  web-quality.yml
anchor/: Anchor.toml  Cargo.toml
anchor/programs/vault/: Cargo.toml
apps/agent/: .dockerignore  .gitignore  readme.md
apps/agent/api/: main.py
apps/agent/docs/: deployment_gcp.md  model_providers.md  openrouter_integration.md  supabase_integration.md
apps/agent/factor_bridge_agent/: .env.example  (+6 more)
apps/web/: .gitignore  Dockerfile  drizzle.config.ts  next.config.js  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json
factor_bridge/: Dockerfile  README.md  pyproject.toml
factor_bridge/docs/: deployment_gcp.md  model_providers.md  openrouter_integration.md  supabase_integration.md
factor_bridge/factor_bridge_agent/sub_agents/: __init__.py
factor_bridge/factor_bridge_agent/tools/: identity_tools.py  platform_tools.py
migrations/meta/: 0000_snapshot.json  _journal.json
public/: site.webmanifest
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
src/config/: brand.ts
src/db/: index.ts  schema.ts  seed.ts
src/lib/: cache-manifest.ts  db.ts  stripe.ts  utils.ts
src/styles/: brand.css
(+185 files in other folders)
