[project]
name = "factor-bridge"
version = "0.1.0"
description = "Agente intermediario bilateral de factoring para Perú (Google ADK + ReAct)"
requires-python = ">=3.10"
dependencies = [
    "google-adk[extensions]==1.33.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "google>=3.0.0",
    "protobuf>=4.21.6,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["factor_bridge_agent"]
